@@ -1,3 +1,8 @@
+[B]Version 2.0.4[/B]
+- Updated links (Spinalcracker)
+- Added Paul Joseph Watson section
+- Fixed random bugs with Krypton
+
 [B]Version 2.0.3[/B]
 - Updated links (Spinalcracker)
 
